K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: systematicmess/platform:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platform-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 8080
      targetPort: 8080
  # - name: plafromgrpc
  #   protocol: TCP
  #   port: 666
  #   targetPort: 666
